add Update & paging methods, generate proto
